--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Stupid Coaching</h1>
-  <p>Ask your coach anything:</p>
+  <p>Ask your coach anything</p>
   <form action="/answer">
     <input type="text" name="question">
     <input type="submit" value="Ask!">
